# mc-manager

./: Cargo.toml  README.md
extra_mods/: test.txt
src/: constants.rs  curseforge.rs  main.rs  models.rs  serverctl.rs
src/page/: index.html  style.css
