[package]
name = "mc-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket-include-static-resources = "0.10.5"
zip = "4.0.0"
tokio = { version = "1", features = ["fs", "rt-multi-thread", "macros"] }
async-std = { version = "1", features = ["attributes"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1.10"
reqwest = { version = "0.12.18", features = ["json"] }
semver = "1.0.26"
